finished chap eval

--- a/content/1_Introduction/2_Objectives.tex
+++ b/content/1_Introduction/2_Objectives.tex
@@ -1,7 +1,7 @@
 \section{Objectives}
 \label{sec:Objectives}
 
-In this thesis, we propose a new tool-supported workflow in which client code gets automatically migrated after a web service was modified. We focus on light-weight Web API technologies which can be described by an IDL, such as REST, GraphQL and gRPC. Our main objective is to facilitate the workflow shown in Figure \ref{fig:oldWorkflow} by significantly reducing the effort for API consumers. Therefore, we introduce a state-of-the-art description language to specify a machine-readable migration guide. This guide enables API providers to describe all modifications of a Web API from a previous to its latest version. In addition, we propose a tool that parses our migration guide and generates library code that is persistent to changes to its public interface once it is run for the first time. It can be used in an existing \ac{CI/CD} pipeline or via the command line.
+In this thesis, we propose a new tool-supported workflow in which client code gets automatically migrated after a web service was modified. We focus on light-weight Web API technologies which can be described by an IDL, such as REST, GraphQL and gRPC. Our main objective is to facilitate the workflow shown in Figure \ref{fig:oldWorkflow} by significantly reducing the effort for API consumers. Therefore, we introduce a state-of-the-art description language to specify a machine-readable migration guide. This guide enables API providers to describe all modifications of a Web API from a previous to its latest version. In addition, we propose a tool that parses our migration guide and generates library code that is persistent to changes to its public interface once it is run for the first time. It can be used in an existing \textit{\ac{CI/CD}} pipeline or via the command line.
 
 \begin{figure}[h]
 	\centering{
