--- a/content/1_Introduction/3_Outline.tex
+++ b/content/1_Introduction/3_Outline.tex
@@ -1,6 +1,4 @@
 \section{Outline}
 \label{sec:Outline}
 
-After the initial introduction into challenges of Web API evolution and our motivation to overcome them in chapter \ref{ch:Introduction}, we examine the current state of related research topics in chapter \ref{ch:RelatedWork}. Identifying the challenges in related research faciliates defining the key requirements for our proposed workflow and discovers several limitations to be aware of as Web APIs evolve. Chapter \ref{ch:RequirementsElicitation} comprises all requirements and constraints we identified from related work. In addition, we were able to derive multiple use cases from potential real-world scenarios.
-
-// to be continued
+After the initial introduction into challenges of Web API evolution and our motivation to overcome them in Chapter \ref{ch:Introduction}, we examine the current state of related research topics in Chapter \ref{ch:RelatedWork}. Identifying the challenges in related research faciliates defining the key requirements for our proposed workflow and discovers several limitations to be aware of as Web APIs evolve. Chapter \ref{ch:RequirementsElicitation} comprises all requirements and constraints we identified from related work. In addition, we were able to derive multiple use cases from potential real-world scenarios. Taking into account all requirements and the existing related work, we create the design of our proposed system, which is described in Chapter \ref{ch:SystemDesign}. Our system is composed of multiple subsystems that each provide their own functionality. In Chapter \ref{ch:ObjectDesign} we select detailed solutions for individual subsystems by identifying either suitable third-party components or pattern templates. We instantiate our proposed system in \textsc{Pallidor}, our prototypical implementation in the Swift programming language. In Chapter \ref{ch:CaseStudyEvaluation}, we use Pallidor to migrate various types of change for a sample Web API and evaluate our proposed system based on our findings. Chapter \ref{ch:Summary} concludes the thesis and discusses future work.
