--- a/content/2_RelatedWork/1_API_Evolution_Patterns.tex
+++ b/content/2_RelatedWork/1_API_Evolution_Patterns.tex
@@ -1,8 +1,8 @@
 \section{API Evolution Patterns}
 \label{sec:APIEvolutionPatterns}
 
-Recently, in order to better understand Web API evolution, research has been devoted to classify similar kinds of changes into patterns and creating guidelines for an efficient development of Web APIs. These studies provide useful hints for determining implementation details of the migration guide specification and creating rules for automating migratory steps.
+Recently, in order to better understand Web API evolution, research has been devoted to classifying similar kinds of changes into patterns and creating guidelines for an efficient development of Web APIs. These studies provide useful hints for determining implementation details of the migration guide specification and creating rules for automating migration steps.
 
-Li et al. \cite{li_how_2013} examined large popular Web APIs and defined common characteristics of changes. Their study identifies 16 change patterns, 12 of them causing compile-time errors if a high-level library is used to wrap messages on HTTP level and 4 changes causing runtime errors. They found that on average more than 50\% of the API was changed with 80\% of that breaking changes being refactorings. In addition, they identified six new challenges that arise from Web API evolution compared to local libraries. As their results show, Web APIs are less likely to change at the HTTP level than it is on their corresponding library wrappers. Hence, they suggest providing a tool that automates migration tasks at the HTTP level. These results encourage to automate the migration process, since a large part of the changes are refactorings and well-defined patterns for changes help determine the requirements for the migration guide and rules.
+Li et al. \cite{li_how_2013} examined large popular Web APIs and defined common characteristics of changes. Their study identifies 16 change patterns, 12 of them causing compile-time errors if a high-level library is used to wrap messages on HTTP level and four changes causing runtime errors. They found that on average more than 50\% of the API was changed with 80\% of that breaking changes being refactorings. In addition, they identified six new challenges that arise from Web API evolution compared to local libraries. As their results show, Web APIs are less likely to change at the HTTP level than it is on their corresponding library wrappers. Hence, they suggest providing a tool that automates migration tasks at the HTTP level. These results encourage to automate the migration process, since a large part of the changes are refactorings. Their well-defined patterns for changes help us to determine the requirements for the migration guide and rules.
 
 Exploring the challenges Web API providers are facing, Lübke et al. \cite{lubke_interface_2019} extracted eight patterns that can be applied when creating or adapting an evolution strategy for an API. These are derived from best practices found in literature and major public Web APIs \cite{lubke_interface_2019}. The authors describe different alternatives for introducing incompatible changes and advocate for using API versioning and description techniques. While one pattern does not support incompatible changes, the others balance forces of stability, potential to innovate, and maintainability for API providers. Although client developers benefit from a well-structured evolution strategy, it does not reduce the effort required to migrate between versions, especially if the API is changed frequently. By providing a machine-readable migration guide, providers would simplify their customers' workflow while maintaining the innovation potential and maintainability of their API.
