--- a/content/2_RelatedWork/3_API_Evolution_Automation.tex
+++ b/content/2_RelatedWork/3_API_Evolution_Automation.tex
@@ -3,9 +3,9 @@
 
 Due to the fact that adapting a client application to the latest version of an API is cumbersome, various approaches to automate the migration process have been proposed. However, automation techniques for library evolution have been rarely adopted in practice \cite[p. 300]{li_how_2013}. Li et. al divides the techniques into two categories. Operation-based tools record changes made by API providers and provide a replay function to refactor client code accordingly. The second technique analyzes changes by comparing source code and related documents of two different releases \cite[p. 306]{li_how_2013}. 
 
-One example for an operation-based tool is \textit{CatchUp!} \cite{henkel_catchup!_2005} which creates a log of refactorings as API providers modify their code. Henkel et al. defined a trace file so that it can also be used for documentation puposes as it is in human-readable XML format and offers the option of creating an HTML document using style sheets. Their tool enables developers to replay this log to upgrade the client application by playing back the log of refactorings using its Eclipse plugin. Documenting changes in a human- and machine-readable format makes debugging easier and allows provider and consumer tools to be developed independently.
+One example for an operation-based tool is \textit{CatchUp!} \cite{henkel_catchup!_2005} which creates a log of refactorings as API providers modify their code. Henkel et al. defined a trace file so that it can also be used for documentation purposes as it is in human-readable XML format and offers the option of creating an HTML document using style sheets. Their tool enables developers to replay this log to upgrade the client application by playing back the log of refactorings using its Eclipse plugin. Documenting changes in a human- and machine-readable format makes debugging easier and allows provider and consumer tools to be developed independently.
 
 Dig et. al \cite{hutchison_automated_2006} developed the Eclipse plugin \textit{RefactoringCrawler} that automatically
-detects refactorings by analyzing the source code between two versions. To increase the accuracy, their algorithm analyzes the semantics of refactor candidates. For example it detects renaming and changing of method signatures by analyzing the semantics of its call hierarchy \cite{hutchison_automated_2006}. They are able to determine seven types of refactorings with an accuracy of 85\%, focusing on rename and move modifications. 
+detects refactorings by analyzing the source code between two versions. To increase the accuracy, their algorithm analyzes the semantics of refactor candidates. For example, it detects renaming and changing of method signatures by analyzing the semantics of its call hierarchy \cite{hutchison_automated_2006}. They are able to determine seven types of refactorings with an accuracy of 85\%, focusing on rename and move modifications. 
 
 Current academic literature on tools to automate migration refactorings is devoted to local libraries. While there are industry tools that support generating libraries in multiple languages from service specifications (e.g. OpenAPI Generator\footnote{https://openapi-generator.tech/}) and vice versa, they do not support migrating between different versions of an API. Furthermore, current automation tools do not cover new challenges introduced by Web APIs \cite[p. 306]{li_how_2013}.
