--- a/content/3_RequirementsElicitation.tex
+++ b/content/3_RequirementsElicitation.tex
@@ -1,12 +1,13 @@
 \chapter{Requirements Elicitation}
 \label{ch:RequirementsElicitation}
 
-As described in chapter \ref{ch:RelatedWork}, recent research has identified several drawbacks to modern Web APIs. Studies have been conducted showing that their evolution has a large impact on their consumers (\cite{brito_you_2020}, \cite{xavier_historical_2017}, \cite{espinha_web_2014}). As a consequence, client developers face an increased effort to keep their application code compatible, since current tools for the automatic migration of client code (\cite{henkel_catchup!_2005}, \cite{hutchison_automated_2006}) are not applicable in a Web API context \cite{li_how_2013}. In order to better understand Web API evolution, recent studies have introduced classifications of several recurring change patterns and evolution strategies that indicate the challenges providers and consumers are facing (\cite{li_how_2013}, \cite{lubke_interface_2019}). 
+As described in Chapter \ref{ch:RelatedWork}, recent research has identified several drawbacks to modern Web APIs. Studies have been conducted, showing that their evolution has a large impact on their consumers (\cite{brito_you_2020}, \cite{xavier_historical_2017}, \cite{espinha_web_2014}). As a consequence, client developers face an increased effort to keep their application code compatible, since current tools for the automatic migration of client code (\cite{henkel_catchup!_2005}, \cite{hutchison_automated_2006}) are not applicable in a Web API context \cite{li_how_2013}. In order to better understand Web API evolution, recent studies have introduced classifications of several recurring change patterns and evolution strategies that indicate the challenges providers and consumers are facing (\cite{li_how_2013}, \cite{lubke_interface_2019}). 
 
-Addressing these challenges, we propose introducing a tool-supported workflow as shown in Figure \ref{fig:newWorkflow} to significantly reduce the impact of Web API evolution on consumers. Therefore a majority of migratory tasks needs to be automated according to a machine-readable migration guide which needs to be prepared in advance by providers. All changes are encapsulated in a separate library to be abstracted from client code. This library is added to client applications as a dependency. In addition, our system facilitates the workflow of API providers to release new versions by ensuring that changes to the interface do not affect consumer applications, hence providing perceived stability. The system's main objective is to combine the convenience of local libraries with the flexiblity of modern Web APIs. It aims to be seamlessly integrated into commonly used tools and workflows like continuous integration, version control and dependency management. 
+Addressing these challenges, we propose introducing a tool-supported workflow as shown in Figure \ref{fig:newWorkflow} to significantly reduce the impact of Web API evolution on consumers. Therefore, a majority of migratory tasks needs to be automated according to a machine-readable migration guide which needs to be prepared in advance by providers. All changes are encapsulated in a separate library to be abstracted from client code. This library is added to client applications as a dependency. In addition, our system facilitates the workflow of API providers to release new versions by ensuring that changes to the interface do not affect consumer applications, hence providing perceived stability. The system's main objective is to combine the convenience of local libraries with the flexiblity of modern Web APIs. It aims to be seamlessly integrated into commonly used tools and workflows like continuous integration, version control and dependency management. 
 
-Given the current and proposed workflow, multiple functional and non-functional requirements can directly be derived. Web API consumers use the system to automatically migrate their application between two versions. Therefore the system needs to import a machine-readable migration guide that is delivered by Web API providers. Our analysis identified all necessary system requirements which are listed in the following section in detail, use cases are identified for all actors and exemplary scenarios for possible future migration scenarios are presented. All requirements and constraints are listed in section \ref{sec:Requirements} while use cases and scenarios are shown in section \ref{sec:UseCases} and section \ref{sec:Scenarios}, respectively.
+Given the current and proposed workflow, multiple functional and nonfunctional requirements can directly be derived. Web API consumers use the system to automatically migrate their application between two versions. Therefore, the system needs to import a machine-readable migration guide that is delivered by Web API providers. Our analysis identified all necessary system requirements which are listed in the following section in detail. Furthermore, use cases are identified for all actors and exemplary scenarios for possible future migration scenarios are presented. All requirements and constraints are listed in section \ref{sec:Requirements} while use cases and scenarios are shown in section \ref{sec:UseCases} and section \ref{sec:Scenarios}, respectively.
 \newpage
 \input{content/3_RequirementsElicitation/1_Requirements}
 \input{content/3_RequirementsElicitation/2_UseCases}
+\newpage
 \input{content/3_RequirementsElicitation/3_Scenarios}
