--- a/content/3_RequirementsElicitation/2_UseCases/1_FixClientApplication.tex
+++ b/content/3_RequirementsElicitation/2_UseCases/1_FixClientApplication.tex
@@ -18,7 +18,7 @@
     		\item The Web API provider published a machine-readable migration guide along with an updated IDL document.
     	\end{itemize}
     	
-    	\textbf{Postcondition:} Client application's dependency must be updated to use the latest version of the generated library code.
+    	\textbf{Postcondition:} The client application's dependency must be updated to use the latest version of the generated library code.
     	\\
     \hline
     	\textit{Artefact} & Migration tool\\
