--- a/content/3_RequirementsElicitation/3_Scenarios/1_RESTScenario.tex
+++ b/content/3_RequirementsElicitation/3_Scenarios/1_RESTScenario.tex
@@ -3,4 +3,4 @@
 
 \textit{Simplified migration process in an iOS application that uses a REST API backend for storing and retrieving notes.}
 \medskip
-\\The iOS application "MyNotesApp" published by NoteMe Ltd. uses a REST API backend to store and retrieve the notes of its users. The backend utilizes the OpenAPI specification to describe its publicly exposed interface and behavior. Both systems are developed by individual teams that incorporate our migration tool into their workflow. Both code bases are located in separate repositories on Github\footnote{https://www.github.com/}. After Alice, a developer from the backend team, published a new version of the REST API, she provides two URIs located on the same web server pointing to the updated OpenAPI specification and a migration guide. Since new business demands required her to modify the application's data models, breaking changes were introduced that she specified in the migration guide. Bob, a member of the frontend developer team is aware of these breaking changes, but he cannot apply all changes manually because the frontend team faces staffing shortage. However, our migration tool is part of the CI pipeline as a Github action, which automatically migrates all changes and generates updated library code that is submitted via git pull request to its own repository on Github. Since the iOS application uses the Swift Package Manager to maintain its dependencies, the updated library code is automatically incorporated after the frontend team accepted the pull request. A new release is created by the CD system and Claire, the tech leader of "MyNotesApp" publishes the updated app to the Apple AppStore.
+\\The iOS application "MyNotesApp" published by NoteMe Ltd. uses a REST API backend to store and retrieve the notes of its users. The backend utilizes the OpenAPI specification to describe its publicly exposed interface and behavior. Both systems are developed by individual teams that incorporate our migration tool into their workflow. Both code bases are located in separate repositories on GitHub\footnote{https://www.github.com/}. After Alice, a developer from the backend team, published a new version of the REST API, she provides two URIs located on the same web server pointing to the updated OpenAPI specification and a migration guide. Since new business demands required her to modify the application's data models, breaking changes were introduced that she specified in the migration guide. Bob, a member of the frontend developer team is aware of these breaking changes, but he cannot apply all changes manually because the frontend team faces staffing shortage. However, our migration tool is part of the CI pipeline as a GitHub action, which automatically migrates all changes and generates updated library code that is submitted via git pull request to its own repository on GitHub. Since the iOS application uses the Swift Package Manager to maintain its dependencies, the updated library code is automatically incorporated after the frontend team accepted the pull request. A new release is created by the CD system and Claire, the tech leader of "MyNotesApp" publishes the app to the Apple AppStore.
