--- a/content/3_RequirementsElicitation/3_Scenarios/2_gRPCClient.tex
+++ b/content/3_RequirementsElicitation/3_Scenarios/2_gRPCClient.tex
@@ -3,4 +3,4 @@
 
 \textit{Simplified migration process in a web application that uses a public gRPC-based API provided by Google to create 3D animated GIFs.}
 \medskip
-\\ The social media platform "Yearbook" is a web application written in TypeScript, with which users share the most important milestones of their year. It differs from other platforms in that the number of posts per user is limited to 12 posts per year. SocialViz Inc., the company behind Yearbook, identified that its customers want to use animated GIFs to celebrate their birthdays with their friends and families with an eye-catching post. Creating a GIF is an inconvenient process for their users. Fortunately, Google LLC provides "gifinator", a public service that allows client applications to create animated 3D GIFs by sending gRPC-based messages with parameters specifying the style of these animations. Lucas, a developer on the Yearbook frontend team, is responsible for integrating this interface. Since Google released the API in a beta version, it is subject to frequent, unannounced changes, namely renaming of public operations. Lucas spends a large share of his working hours adjusting the interface to adapt to these changes while his other tasks remain unfinished. To meet these challenges, he integrates our tool into the CI pipeline of Yearbook. Thereby, all changes are automatically incorporated and abstracted, generating a stable interface that client code can rely on. To make this possible, Google offers a machine-readable migration guide and an updated \texttt{.proto} file, that are fetched by our system. Since the generated output is built into the Yearbook as a Javascript library, updating this dependency can easily be done by Lucas, who publishes it on a web server.
+\\ The social media platform "Yearbook" is a web application written in TypeScript, that enables users to share the most important milestones of their year. It differs from other platforms in that the number of posts per user is limited to 12 posts per year. SocialViz Inc., the company behind Yearbook, identified that its customers want to use animated GIFs to celebrate their birthdays with their friends and families with an eye-catching post. Creating a GIF is an inconvenient process for their users. Fortunately, Google LLC provides "gifinator", a public service that allows client applications to create animated 3D GIFs by sending gRPC-based messages with parameters specifying the style of these animations. Lucas, a developer on the Yearbook frontend team, is responsible for integrating this interface. Since Google released the API in a beta version, it is subject to frequent, unannounced changes, namely renaming of public operations. Lucas spends a large share of his working hours adjusting the interface to adapt to these changes while his other tasks remain unfinished. To meet these challenges, he integrates our tool into the CI pipeline of Yearbook. Thereby, all changes are automatically incorporated and abstracted, generating a stable interface that client code can rely on. To make this possible, Google offers a machine-readable migration guide and an updated \texttt{.proto} file, that are fetched by our system. Since the generated output is built into the Yearbook as a JavaScript library, updating this dependency can easily be done by Lucas, who publishes it on a web server.
