--- a/content/3_RequirementsElicitation/3_Scenarios/3_FuturisticGraphQL.tex
+++ b/content/3_RequirementsElicitation/3_Scenarios/3_FuturisticGraphQL.tex
@@ -1,6 +1,6 @@
 \subsubsection{Automating migration documentation for Web API providers}
 \label{subsubsec:Scenario:graphQLScenario}
 
-\textit{Simplified evolution process for the provider of a GraphQL-based Web API by generating a machine-readable migration guide that can be used by the consumer's tools}
+\textit{Simplified evolution process for the provider of a GraphQL-based Web API by generating a machine-readable migration guide that can be used by the consumer's tools.}
 \medskip
-\\ "Unsensored" is an application of the startup Ingenuitees. It collects and analyzes sensor information from industrial machines to predict the need for maintenance activities. After they built a solid customer base and sufficient industry knowledge, they want to expand their services to new potential customers. Therefore, they decided to create a monetized Web API that allows to query analytical information using the GraphQL query language and incorporate the responses in client applications. As they work closely with their customers, Amanda, Ingenuitees 'senior developer, presents their plan to Drew, a developer responsible for integrating third-party services at OnTrack Ltd., one of Ingenuitees' key customers. Although Drew likes this idea, he points out that OnTrack Ltd. has strict requirements for the stability of API contracts. These requirements are at odds with Ingenuitee's entrepreneurial spirit and agile development processes. Therefore, Amanda wants to ensure that new features can be added frequently while deprecated features can be changed without breaking client applications. Drew advises her that he has included our proposed system in their application's CI pipeline to automatically migrate other third-party Web APIs. For this to work, Amanda would have to state every change in a machine-readable migration guide and provide it along with the new version and IDL document. They agree to develop a proof of concept, whereupon Amanda begins to gather information regarding the creation of a migration guide. She finds that by comparing the differences in the schema definitions of two versions of their API, she can develop an algorithm to generate a machine-readable migration guide. She integrates this algorithm as a Github action into the CI pipeline of the Web API and publishes the result along with the updated schema definition on a staging web server. Drew uses our system to integrate the Web API of "Unsensored" in their test environment. After verifying that the migrations are done correctly, Amanda publishes the Web API for production.
+\\ "Unsensored" is an application of the startup Ingenuitees. It collects and analyzes sensor information from industrial machines to predict the need for maintenance activities. After they built a solid customer base and sufficient industry knowledge, they want to expand their services to new potential customers. Therefore, they decided to create a monetized Web API that allows to query analytical information using the GraphQL query language and incorporate the responses in client applications. As they work closely with their customers, Amanda, Ingenuitees 'senior developer, presents their plan to Drew, a developer responsible for integrating third-party services at OnTrack Ltd., one of Ingenuitees' key customers. Although Drew likes this idea, he points out that OnTrack Ltd. has strict requirements for the stability of API contracts. These requirements are at odds with Ingenuitee's entrepreneurial spirit and agile development processes. Therefore, Amanda wants to ensure that new features can be added frequently while deprecated features can be changed without breaking client applications. Drew advises her that he has included our proposed system in their application's CI pipeline to automatically migrate other third-party Web APIs. For this to work, Amanda would have to state every change in a machine-readable migration guide and provide it along with the new version and IDL document. They agree to develop a proof of concept, whereupon Amanda begins to gather information regarding the creation of a migration guide. She finds that by comparing the differences in the schema definitions of two versions of their API, she can develop an algorithm to generate a machine-readable migration guide. She integrates this algorithm as a GitHub action into the CI pipeline of the Web API and publishes the result along with the updated schema definition on a staging web server. Drew uses our system to integrate the Web API of "Unsensored" in their test environment. After verifying that the migrations are done correctly, Amanda publishes the Web API for production.
