--- a/content/6_ObjectDesign/2_InterfaceSpecification.tex
+++ b/content/6_ObjectDesign/2_InterfaceSpecification.tex
@@ -1,7 +1,7 @@
 \section{Interface Specification}
 \label{sec:InterfaceSpecification}
 
-Reusable components and pattern used to create custom components offer their functionality via public-facing interfaces. A detailed specification of these interfaces is required to enable an integration of all subsystems. Additionally, each subsystem defines artifacts that they produce for and consume from other components. The following section demonstrates the internal structure of custom components while for reused third-party subsystems their integration and emitted artifacts are illustrated.
+Reusable components and patterns used to create custom components offer their functionality via public-facing interfaces. A detailed specification of these interfaces is required to enable an integration of all subsystems. Additionally, each subsystem defines artifacts that they produce for and consume from other components. The following section demonstrates the internal structure of custom components while for reused third-party subsystems their integration and emitted artifacts are illustrated.
 
 \begin{figure}[!h]
 	\centering{
@@ -21,7 +21,7 @@ Importing an \ac{IDL} for a specific type of Web API needs to flexibly switch be
 	}
 \end{figure}
 
-\texttt{SourceCodeEntity} objects are used by multiple components. They represent the basic syntactical elements that are common in all modern programming languages. Figure \ref{fig:cdSourceCodeEntity} shows their composition and their most important attributes and relations. \texttt{Class}, \texttt{Method} and \texttt{Enum} entities represent structual elements in which other elements can be nested. A \texttt{Class} element contains \texttt{Attributes} and \texttt{Methods}, whereas \texttt{Enums} specify at least one \texttt{EnumCases}. Each \texttt{Source\-Code\-Entity} can be identified by a \ac{UID}. For \texttt{Class} and \texttt{Enum} elements, their name itself is unique, while for \texttt{Variables}, \texttt{Methods} and \texttt{EnumCases} their context needs to be taken into account.
+\texttt{SourceCodeEntity} objects are used by multiple components. They represent the basic syntactical elements that are common in all modern programming languages. Figure \ref{fig:cdSourceCodeEntity} shows their composition and their most important attributes and relations. \texttt{Class}, \texttt{Method} and \texttt{Enum} entities represent structual elements in which other elements can be nested. A \texttt{Class} element contains \texttt{Attributes} and \texttt{Methods}, whereas \texttt{Enums} specify at least one \texttt{EnumCase}. Each \texttt{Source\-Code\-Entity} can be identified by a \ac{UID}. For \texttt{Class} and \texttt{Enum} elements, their name itself is unique, while for \texttt{Variables}, \texttt{Methods} and \texttt{EnumCases} their context needs to be taken into account.
 
 \begin{figure}[!h]
 	\centering{
@@ -31,7 +31,7 @@ Importing an \ac{IDL} for a specific type of Web API needs to flexibly switch be
 	}
 \end{figure}
 
-Adapting a previous facade to recent changes of a Web API requires importing its source code. Therefore, the \texttt{SourceCode} \texttt{Importer} subsystem must be able to parse source code of multiple programming languages. The decision which programming language needs to be parsed is made during runtime by the user. Since the requirements are the same as those for importing different types of \acp{IDL}, the strategy design pattern is also used here. The selection of the programming language to parse is done by the \texttt{Language\-Selection} component while the \texttt{Facade\-Builder} requests the parsed \texttt{Source\-Code\-Entity} objects.
+Adapting a previous facade to recent changes of a Web API requires importing its source code. Therefore, the \texttt{SourceCode} \texttt{Importer} subsystem must be able to parse source code of multiple programming languages. The decision which programming language needs to be parsed is made during runtime by the user. Since the requirements are the same as for importing different types of \acp{IDL}, the strategy design pattern is also used here. The selection of the programming language to parse is done by the \texttt{Language\-Selection} component while the \texttt{Facade\-Builder} requests the parsed \texttt{Source\-Code\-Entity} objects.
 
 \begin{figure}[!h]
 	\centering{
@@ -43,11 +43,11 @@ Adapting a previous facade to recent changes of a Web API requires importing its
 
 In addition to the decoded representation of the previous facade code, the migration guide needs to be parsed, too. Based on our decision to use \ac{JSON} for defining a migration guide, it can be parsed using a language's core libraries or third-party components. The decoded migration guide structure is shown in Figure \ref{fig:cdMigrationGuideArtifcat}. 
 
-A migration guide contains the type of \ac{IDL} specification in which the Web API is described as well as its service type. Additionally, it specifies all changes that were introduced by the latest version of the Web API. Every change is associated with one of four change types. \texttt{Add\-Changes} denote, that one or more elements of a Web API were added to it. This includes for example adding attributes to a model, parameters to a method or methods to an endpoint. \texttt{Delete\-Changes} indicate that an element was removed from the Web API. For migratable deletions such as removing an attribute of a model, a fallback value can be specified which is used instead of the removed value. \texttt{Rename\-Changes} are used to automate refactorings. Since the functionality of a renamed element remains unchanged, only the previous and new identifications have to be specified here. 
+A migration guide contains the type of \ac{IDL} specification in which the Web API is described as well as its service type. Additionally, it specifies all changes that were introduced by the latest version of the Web API. Every change is associated with one of four change types. \texttt{Add\-Changes} denote, that one or more elements of a Web API were added to it. This includes for example adding attributes to a model, parameters to an operation or operations to an endpoint. \texttt{Delete\-Changes} indicate that an element was removed from the Web API. For migratable deletions such as removing an attribute of a model, a fallback value can be specified which is used instead of the removed value. \texttt{Rename\-Changes} are used to automate refactorings. Since the functionality of a renamed element remains unchanged, only the previous and new identifications have to be specified here. 
 
 Elements that were renamed and whose functionality also changed are specified with \texttt{Replace\-Changes}. They are the most complex type of change as they need to contain not only the replacement element, but additionally instructions on how to revert them to their previous version and convert their previous to their current version. Code stated in a \texttt{Replace\-Change} needs to be converted into statements of the programming language specified by the user. Instead of introducing another \ac{DSL} or extending the migration guide \ac{DSL}, we decided to use a \ac{GPL} that is common to web developers. We chose JavaScript for that purpose, as it is one of the most used programming language by web developers and it complements \ac{JSON} well. Furthermore, JavaScript code can be directly executed by an interpreter without previously compiling it. Various programming languages support interpreting JavaScript code. For example, Microsoft provides Windows Script Engines\footnote{https://docs.microsoft.com/en-us/previous-versions/windows/internet-explorer/ie-developer/windows-scripting/windows-script-engines} for C\# and Apple released the framework JavaScriptCore\footnote{https://developer.apple.com/documentation/javascriptcore} for Swift and Objective-C in order to parse and interpret JavaScript at runtime .
 
-Each type of change is applied to one object of the Web API and targets one property of it. For example, adding a parameter to a method results in an \texttt{Add\-Change} for a \texttt{Method} object type with a \texttt{Parameter} target type while renaming a model results in a \texttt{Rename\-Change} for a \texttt{Model} object type with a \texttt{Signature} target type. All changes reference \texttt{Content}, i.e. the unique identification of an element of the Web API including additional information that supports the migration process. Invalid changes are indicated by an incorrect combination of their internal information. They are identified by their validation method which reports any errors to the user.
+Each type of change is applied to one object of the Web API and targets one property of it. For example, adding a parameter to an operation results in an \texttt{Add\-Change} for a \texttt{Operation} object type with a \texttt{Parameter} target type while renaming a model results in a \texttt{Rename\-Change} for a \texttt{Model} object type with a \texttt{Signature} target type. All changes reference \texttt{Content}, i.e. the unique identification of an element of the Web API including additional information that supports the migration process. Invalid changes are indicated by an incorrect combination of their internal information. They are identified by their validation method which reports any errors to the user.
 
 \begin{figure}[!h]
 	\centering{
@@ -57,7 +57,7 @@ Each type of change is applied to one object of the Web API and targets one prop
 	}
 \end{figure}
 
-For performing the migration steps, the \texttt{Migration} \texttt{Manager} subsystem incorporates the imported migration guide and decoded previous facade. Analogous to the types of changes corresponding types of migration are defined. \texttt{Migrations} contain the change that must be migrated as well as information that indicates whether they are solvable and have been executed. Furthermore, they reference a \texttt{Modifiable} object on which the migration is performed. The \texttt{Modifiable} interface is implemented by a wrapper component that acts as an adapter for modifying a \texttt{SourceCodeEntity} of the previous facade. By executing a \texttt{Migration}, the \texttt{modify} method of a \texttt{Modifiable} is triggered which adapts the \texttt{SourceCodeEntity} according to the type of migration. The \texttt{mo\-di\-fied} property of a \texttt{Modifiable} denotes that this object has already been migrated. All migrations as well as the previous facade are composed in the \texttt{MigrationSet}. By analyzing the changes stated in the migration guide and their target entities, it creates the corresponding migrations by invoking the \texttt{ac\-ti\-vate} method. Unsupported or incorrect combinations result in an unsolvable migration. In addition, the user can select a migration strategy to control the migration under certain conditions. The selected migration strategy thereby alters the adaption of source code entities or prevents migrating certain types of changes. Breaking changes that are not migrated automatically must be manually adapted by client developers to fix their application. The \texttt{MigrationSet} is the public interface of the subsystem by providing the \texttt{perform} method to perform a migration and return the adapted facade element.
+For performing the migration steps, the \texttt{Migration} \texttt{Manager} subsystem incorporates the imported migration guide and decoded previous facade. Analogous to the types of changes, corresponding types of migration are defined. \texttt{Migrations} contain the change that must be migrated as well as information that indicates whether they are solvable and have been executed. Furthermore, they reference a \texttt{Modifiable} object on which the migration is performed. The \texttt{Modifiable} interface is implemented by a wrapper component that acts as an adapter for modifying a \texttt{SourceCodeEntity} of the previous facade. By executing a \texttt{Migration}, the \texttt{modify} method of a \texttt{Modifiable} is triggered which adapts the \texttt{SourceCodeEntity} according to the type of migration. The \texttt{mo\-di\-fied} property of a \texttt{Modifiable} denotes that this object has already been migrated. All migrations as well as the previous facade are composed in the \texttt{MigrationSet}. By analyzing the changes stated in the migration guide and their target entities, it creates the corresponding migrations by invoking the \texttt{ac\-ti\-vate} method. Unsupported or incorrect combinations result in an unsolvable migration. In addition, the user can select a migration strategy to control the migration under certain conditions. The selected migration strategy thereby alters the adaption of source code entities or prevents migrating certain types of changes. Breaking changes that are not migrated automatically must be manually adapted by client developers to fix their application. The \texttt{MigrationSet} is the public interface of the subsystem by providing the \texttt{perform} method to perform a migration and return the adapted facade element.
 
 \begin{figure}[!h]
 	\centering{
@@ -67,7 +67,7 @@ For performing the migration steps, the \texttt{Migration} \texttt{Manager} subs
 	}
 \end{figure}
 
-Generating source code from decoded entities for various programming languages requires the \texttt{Code} \texttt{Generator} subsystem to use the strategy pattern. Thereby, the subsystem can select the correct syntax elements during runtime. In contrast to the \texttt{SourceCode} \texttt{Importer} subsystem, it takes \texttt{Modifiable} objects, i.e. wrapped \texttt{SourceCodeEntity} objects, as input and generates a string of compilable source code in the programming language the user specified. Its service is used by the subsystems concerned with generating the library code for an IDL and generating the migrated facade code.
+Generating source code from decoded entities for various programming languages requires the \texttt{Code} \texttt{Generator} subsystem to use the strategy pattern. Thereby, it can select the correct syntax elements during runtime. In contrast to the \texttt{Source\-Code} \texttt{Importer} subsystem, it takes \texttt{Modifiable} objects, i.e. wrapped \texttt{Source\-Code\-Entity} objects, as input and generates a string of compilable source code in the programming language the user specified. Its service is used by the subsystems concerned with generating the library code for an IDL and generating the migrated facade code.
 
 \begin{figure}[!h]
 	\centering{
