--- a/content/6_ObjectDesign/3_Restructuring.tex
+++ b/content/6_ObjectDesign/3_Restructuring.tex
@@ -8,7 +8,7 @@ Additionally, we decided to use JavaScript for handling convert and revert opera
 \begin{figure}[!h]
 	\centering{
 		\includegraphics[width=155mm]{images/subsystem_restructured.pdf}
-		\caption{Restructured subsystem decomposition - The \texttt{Code Generation} subsystem was extracted from the \texttt{Migration Manager} and \texttt{Library Generation} subsystems to provide a uniform interface to both subsystems}
+		\caption[Restructured subsystem decomposition]{Restructured subsystem decomposition - The \texttt{Code Generation} subsystem was extracted from the \texttt{Migration Manager} and \texttt{Library Generation} subsystems to provide a uniform interface to both subsystems}
 		\label{fig:subsystemRestructured}
 	}
 \end{figure}
