--- a/content/6_ObjectDesign/5_Testing.tex
+++ b/content/6_ObjectDesign/5_Testing.tex
@@ -87,6 +87,6 @@ For testing the migration process, the interaction of the \texttt{Migration} \te
 
 \paragraph{System testing} System testing tests all the components together, seen as a single system to identify faults regarding functionality, performance issues and user related problems \cite{bruegge_object-oriented_2010}. 
 
-For testing the systems functionality, its command line interface is used to set different configuration options and produce a library for accessing a Web API. The system works as defined if the emitted code compiles and is able to communicate with the Web API. Error messages issued by the Web API, e.g. in the event of unauthorized access, do not represent a system failure. When integrated into the CI/CD pipeline of a client application, the system uses a preset configuration to produce the library code every time its stage is executed.
+For testing the systems functionality, its command-line interface is used to set different configuration options and produce a library for accessing a Web API. The system works as defined if the emitted code compiles and is able to communicate with the Web API. Error messages issued by the Web API, e.g. in the event of unauthorized access, do not represent a system failure. When integrated into the CI/CD pipeline of a client application, the system uses a preset configuration to produce the library code every time its stage is executed.
 
 Performance tests ensure, that all nonfunctional requirements and design goals are fulfilled \cite{bruegge_object-oriented_2010}. Missing mandatory configuration parameters must result in error messages displayed by the \ac{CLI}. The system provides a parameter to list all parameters and other helpful advice. Important messages must be colored to clearly emphasize their information. The generated library code must be formatted according to the user's ruleset and contains documentation derived from the \ac{IDL} document. All code emitted in a specific programming language must use the syntax elements of its latest major version.
