--- a/content/7_CaseStudyEvaluation.tex
+++ b/content/7_CaseStudyEvaluation.tex
@@ -3,12 +3,12 @@
 
 Evaluating our proposed system demonstrates its usefulness in a potential target environment. For the concrete instantiation, the Swift programming language was selected to implement custom subsystems. Required functionality that was already available is integrated using third-party Swift packages. All used packages are published under MIT license. Since it is a prototypical implementation, it supports importing IDLs only for REST-based Web APIs that are described using the OpenAPI specification. Furthermore, its support for generating client libraries is limited to the Swift programming language. 
 
-Section \ref{sec:Implementation} addresses the details of the implementation of \texttt{Pallidor} which is composed of three libraries that are developed and maintained as standalone Swift packages. Each package is described in detail in its respective section, which provides an overview of the package's functionality and public interface. Furthermore, each section details how the package can be integrated into existing applications and shows its current limitations.
+Section \ref{sec:Implementation} addresses the details of the implementation of \textsc{Pallidor} which is composed of three libraries that are developed and maintained as standalone Swift packages. Each package is described in detail in its respective section, which provides an overview of the package's control flow and public interface. Furthermore, each section details how the package can be integrated into existing applications and shows its current limitations.
 
 
-For evaluating our proposed system, we perform a migration of two consecutive Web API versions using \texttt{Pallidor}. Therefore, we manually manipulate the OpenAPI specification of the sample \texttt{Pet} \texttt{Store}\footnote{https://petstore3.swagger.io/} Web API so that it reflects all change types we identified. Furthermore, we manually create a machine-readable migration guide for each version of the OpenAPI specification to document all occuring changes. 
+For evaluating our proposed system, we perform a migration of two consecutive Web API versions using Pallidor. Therefore, we manually manipulate the Open\-API specification of the sample \texttt{Pet} \texttt{Store}\footnote{https://petstore3.swagger.io/} Web API so that it reflects all change types we identified. Furthermore, we manually create a machine-readable migration guide for each version of the Open\-API specification to document all occuring changes. 
 
-The evaluation in Section \ref{sec:Evaluation} is structured according to the degree of automation according to which the respective type of change can be migrated. Changes of the first category, \textsc{Automated Migration}, can be automatically migrated by using \texttt{Pallidor} with our novel machine-readable migration guide. The second category, \textsc{Semi-Automated Migration}, contains changes that can be migrated by \texttt{Pallidor}, but which also require manual intervention by client developers to overcome them. Changes that require new approaches to automating their migration are addressed in the third category, \textsc{Manual Migration}. Each category describes the problems that are caused by the types of change as well as our approach to solving these problems including its benefits and consequences. Each category is concluded by providing our evaluation process and results.
+The evaluation in Section \ref{sec:Evaluation} is structured according to the degree of automation to which the respective type of change can be migrated. Changes of the first category, \textsc{Automated Migration}, can be automatically migrated by using Pallidor with our novel machine-readable migration guide. The second category, \textsc{Semi-Automated Migration}, contains changes that can be migrated by Pallidor, but which also require manual intervention by client developers to overcome them. Changes that require new approaches to automating their migration are addressed in the third category, \textsc{Manual Migration}. Each category describes the problems that are caused by the types of change as well as our approach to solving these problems including its benefits and consequences. Each category is concluded by providing our evaluation process and results.
 
 \newpage
 \input{content/7_CaseStudyEvaluation/1_Implementation}
