--- a/content/7_CaseStudyEvaluation/1_Implementation/2_PallidorMigrator.tex
+++ b/content/7_CaseStudyEvaluation/1_Implementation/2_PallidorMigrator.tex
@@ -1,6 +1,6 @@
 \subsection{Pallidor Migrator}\label{subsec:PallidorMigrator}
 
-The \textit{PallidorMigrator} package integrates the functionality of the \texttt{Migration} \texttt{Ma\-nager}, \texttt{Migration Guide Importer} and \texttt{SourceCode Importer} subsystems. It uses the information stated in the parsed migration guide to adapt the source code entities of a previously generated facade layer. Therefore, a set of migrations is initialized that performs the necessary migratory steps on the changed target properties of the source code entity. After migrating all changes, the source code entities are converted into Swift code that gets persisted in files. The machine-readable migration guide is parsed by the builtin \texttt{JSONDecoder} of Swift's \texttt{Foundation} framework. The \texttt{PallidorMigrator} package provides a model for mapping the migration guide to its decoded representation. Depending on the type of change that is stated in the migration guide, the \texttt{MigrationSet} initializes a corresponding \texttt{Migration} object. Each \texttt{Migration} is checked for plausiblity on its initialization. Thereby, invalid or inconsistent changes are detected and its \texttt{solvable} property is set to false. An unsolvable \texttt{Migration} results in an error message that is propagated to the user. Every \texttt{Migration} targets one source code entity of a previously generated facade. The \texttt{Sourcery} framework is used for importing its source code. It provides source code entities for all syntactical elements of Swift code such as classes, structs and methods. These entities cannot be extended within the \texttt{PallidorMigrator} package, because they are declared as \texttt{final}.
+The \texttt{PallidorMigrator} package integrates the functionality of the \texttt{Migration} \texttt{Ma\-nager}, \texttt{Migration Guide Importer} and \texttt{SourceCode Importer} subsystems. It uses the information stated in the parsed migration guide to adapt the source code entities of a previously generated facade layer. Therefore, a set of migrations is initialized that performs the necessary migratory steps on the changed target properties of the source code entity. After migrating all changes, the source code entities are converted into Swift code that gets persisted in files. The machine-readable migration guide is parsed by the builtin \texttt{JSONDecoder} of Swift's \texttt{Foundation} framework. The \texttt{PallidorMigrator} package provides a model for mapping the migration guide to its decoded representation. Depending on the type of change that is stated in the migration guide, the \texttt{MigrationSet} initializes a corresponding \texttt{Migration} object. Each \texttt{Migration} is checked for plausiblity on its initialization. Thereby, invalid or inconsistent changes are detected and its \texttt{solvable} property is set to false. An unsolvable \texttt{Migration} results in an error message that is propagated to the user. Every \texttt{Migration} targets one source code entity of a previously generated facade. The \texttt{Sourcery} framework is used for importing its source code. It provides source code entities for all syntactical elements of Swift code such as classes, structs and methods. These entities cannot be extended within the \texttt{PallidorMigrator} package, because they are declared as \texttt{final}.
 
 \begin{lstlisting}[language=Swift, caption={Extending a wrapped Sourcery struct}, captionpos=b, label={lst:WrappedStruct}]
 	/// Wraps struct types of Sourcery
@@ -47,7 +47,7 @@ Their implementations vary depending on the type of source code entity that is m
 
 The public interface of the \texttt{PallidorMigrator} Swift package is provided by the file of the same name. Its initialization requires specifying the URL of the migration guide and the URL of the directory in which the previously generated client library is located. If the migration guide cannot be retrieved or decoded, an error message is thrown and forwarded to the user. Furthermore, on initialization of the \texttt{PallidorMigrator} struct a set of migrations is created. If their plausibility check fails, an error message is shown to the user. Migrating the changes as stated in the migration guide and persisting the adapted facade layer in files are started by invoking the \texttt{buildFacade} method. After generating all files, it returns a list of their URLs. An error is thrown if writing the files of the adapted facade layer fails. The \texttt{PallidorMigrator} Swift package is extensively tested to discover erroneousness migrations. Therefore, migration guides are created that contain various types of changes with their respective targets. The unit tests migrate prepared source code entities according to these migration guides and compare the outcome to predefined results. Various integration tests are performed that combine different changes on a single target to ensure that they do not affect each other. The input documents of previously generated facade layer code and their predefined adapted results are specified in Markdown files located in the \texttt{Resources} subfolder of the test folder. 
 
-Integrating the \texttt{PallidorMigrator} package in a Swift project, the URL of its Github repository must be added to the dependencies in the \texttt{Package.swift} file. Furthermore, the \texttt{develop} branch must be selected for using its latest version.
+Integrating the \texttt{PallidorMigrator} package in a Swift project, the URL of its GitHub repository must be added to the dependencies in the \texttt{Package.swift} file. Furthermore, the \texttt{develop} branch must be selected for using its latest version.
 
 \begin{lstlisting}[language=Swift, caption={Integrating PallidorMigrator in SPM}, captionpos=b, label={lst:IntegrationMigrator}]
 	.package(
@@ -56,4 +56,4 @@ Integrating the \texttt{PallidorMigrator} package in a Swift project, the URL of
 	)
 \end{lstlisting}
 
-The implementation of the \texttt{PallidorMigrator} Swift package deviates from the design of our proposed system. In addition to the original design, the generated library layer must also be imported. No migration guide or previously generated facade can be used during the initial integration of \texttt{Pallidor} as the current version of the Web API is persisted. Therefore, the facade layer is generated based on the public interface of the library layer. Furthermore, no migration strategy can be selected so that all changes of a WebAPI are migrated. A limitation of \texttt{Sourcery} concerns the automatic documentation of the public facade layer of the client library because it does not support parsing comment annotations. Therefore, the documentation for the client library is located at the library layer and must be consulted manually. Additionally, some types of migration must be performed by combining multiple migratory steps. Replacing an endpoint is achieved by replacing all of its methods and then renaming it. Renaming and replacing enum cases and inherited schemas is accomplished by adding their replacements before removing them. Return values of endpoint methods can only be replaced because they do not specify a name that could be renamed. Furthermore, all operations must provide a return value type, which means that deleting them or adding them later is not applicable.
+The implementation of the \texttt{PallidorMigrator} Swift package deviates from the design of our proposed system. In addition to the original design, the generated library layer must also be imported. No migration guide or previously generated facade can be used during the initial integration of \textsc{Pallidor} as the current version of the Web API is persisted. Therefore, the facade layer is generated based on the public interface of the library layer. Furthermore, no migration strategy can be selected so that all changes of a WebAPI are migrated. A limitation of \texttt{Sourcery} concerns the automatic documentation of the public facade layer of the client library because it does not support parsing comment annotations. Therefore, the documentation for the client library is located at the library layer and must be consulted manually. Additionally, some types of migration must be performed by combining multiple migratory steps. Replacing an endpoint is achieved by replacing all of its methods and then renaming it. Renaming and replacing enum cases and inherited schemas is accomplished by adding their replacements before removing them. Return values of endpoint methods can only be replaced because they do not specify a name that could be renamed. Furthermore, all operations must provide a return value type, which means that deleting them or adding them later is not applicable.
