--- a/content/7_CaseStudyEvaluation/2_Evaluation/3_Manual.tex
+++ b/content/7_CaseStudyEvaluation/2_Evaluation/3_Manual.tex
@@ -1,1 +1,25 @@
 \subsection{Manual Migration}\label{subsec:EvalManual}
+There are changes that may occur during the development of a Web API which require manual intervention by client developers. These changes are assigned to the \textsc{Manual Migration} category. They cannot be migrated by our proposed system and they are not reflected in the IDL document of a Web API. These changes potentially result in a fundamental redesign of the client application so that it can use an alternative service.
+
+\begin{description}
+	\item[Category:] \textsc{Manual Migration} \newline Changes of this category must be manually migrated by client developers. Further research must be conducted to develop new approaches to automate their migration.
+	\item[Problem:] Client developers need to manually migrate their application to restore its functionality. Depending on the extent of the change, migration may not be possible at all. More research is required to create new approaches that provide support for client developers. A list of the changes is shown below:
+	\begin{itemize}
+		\item \textit{Change Web API architecture} 
+		\item \textit{Manual authorization process}
+		\item \textit{Web API discontinuation}
+		\item \textit{Request frequency limitation}
+	\end{itemize}
+	\item[Solution:] These changes cannot be migrated by our proposed system. Client developers need to manually adapt their application to the changed environmental conditions. Adapting the client application may be infeasible. Therefore, client developers need to identify alternative services that can substitute the functionality of the originally used Web API.
+	\item[Benefits:] Although our proposed system cannot migrate changes in this category, their classification provides useful insights for related work. Future research can focus on exploring new approaches that will facilitate their migration.
+	\item[Consequences:] Client developers cannot solely rely on an automation of the migration process for their application. They need to monitor the evolution of the Web API in order to react immediately to these types of changes. As the number of published Web APIs increases, alternative services are often offered that can be prepared to replace the functionality of an unavailable Web API.
+	\item[Tested By:] Since our proposed system focuses on automating the migration of changes that affect the syntactic elements of a Web API, manual migrations of semantic changes are not tested.
+\end{description}
+\vspace{0.25cm}
+\textbf{Changing the Web API's architecture} results in a fundamental restructuring of the service. During this process, the type of access and the elementary logic of the Web API can change. A well-known example of this type of change is the GitHub API\footnote{https://github.blog/2016-09-14-the-github-graphql-api/}, the latest version of which is implemented as a GraphQL API instead of the former REST style. The main reasons expressed by its operators are the increased scalability and flexibility of GraphQL, which better fit the expectations of the Web API. Constantly changing requirements result in emerging technologies that will eventually replace previous approaches. Our proposed system can be expanded to generate a client library for the new architectural style. However, neither the system nor the migration guide support migrating a Web API between different technologies.
+
+A \textbf{manual authorization process} often requires client developers to go through additional procedures in which documents are manually reviewed by the Web API provider. This enables providers to verify that the client application uses their Web API in an approved manner. In addition, they can use this process to implement existing laws and regulations. Li et. al noticed this change pattern when analyzing the Sina Weibo Web API \cite{li_how_2013}. As some methods provide access to sensitive personal information such as acquiring a user's private messages, client developers who want to access them, are required to apply for an authorization of their application \cite{li_how_2013}. With the increasing awareness of the correct handling of sensitive information, it can be safely assumed that this type of change will occur more frequently in the future. In addition to developing new technical approaches, a legislative basis must be created to automate their migration. 
+
+\textbf{Web API discontinuation} renders the entire service unavailable and requires new approaches for its migration. Client developers identify a replacement for the discontinued Web API dependency by comparing its functionality with related services. Once they have decided on a suitable alternative, it can be integrated with our proposed system. Automated migration of the discovery process requires a detailed semantic description of available Web APIs to identify related services and recommend the best fit. At the moment there is no recommendation service that provides this functionality.
+
+\textbf{Limiting the frequency of requests} requires client applications to reduce their number of request accordingly. Unlike parameter boundaries, rate limits are not reflected in the IDL document of a Web API. The rate limits are enforced in the backend of a Web API by throttling or disconnecting client applications that exceed them. Distributed client applications that access this Web API must be dynamically adapted to the remaining quota which must be retrievable from the Web API. For example, all APIs provided by Facebook are subject to rate limits\footnote{https://developers.facebook.com/docs/graph-api/overview/rate-limiting/} that are included in the headers of most API responses. However, these headers are not standardized and vary between the different Web API providers. A standardization of these headers enables their incorporation into our client library, so that requests can be automatically reduced or postponed as soon as the limit is reached.
