--- a/content/3_RequirementsElicitation/2_UseCases/3_ReleaseNewWebAPI.tex
+++ b/content/3_RequirementsElicitation/2_UseCases/3_ReleaseNewWebAPI.tex
@@ -10,9 +10,9 @@
     \hline
         \textit{Stimulus} & New functionality was added to the Web API or existing behavior was changed. Therefore, a new version of the Web API is released. \\
     \hline
-    	\textit{Environment} & \textbf{Preconditions:} Provider introduced breaking changes to the exposed interface or behavior when modifying the Web API.
+    	\textit{Environment} & \textbf{Preconditions:} The provider introduced breaking changes to the exposed interface or behavior when modifying the Web API.
     	
-    	\textbf{Postcondition:} Output needs to be published on a publicly accessible server and its URI has to be provided to Web API consumers.
+    	\textbf{Postcondition:} The output needs to be published on a publicly accessible server and its URI has to be provided to Web API consumers.
     	\\
     \hline
     	\textit{Artefact} & Migration guide, IDL document\\
@@ -20,19 +20,19 @@
     \textit{Response} &
     \vspace{-5.1mm}
     \begin{enumerate}[itemindent=-9pt, leftmargin=14pt, itemsep=0pt, align=left]
-    	\item IDL document must describe the publicly exposed interface and behavior. The Web API provider can either manually create this document or generate it using tools.
-    	\item Migration guide must contain the type of IDL used to describe the Web API.
-    	\item Migration guide must contain the type of Web API.
-    	\item Migration guide must contain both the previous and the current version number according to the semantic versioning principles.
-    	\item Migration guide can contain a short textual summary to provide an overview of the changes introduced in the current version.
-    	\item Migration guide must contain a list of all breaking changes introduced in the current version. 
+    	\item The IDL document must describe the publicly exposed interface and behavior. The Web API provider can either manually create this document or generate it using tools.
+    	\item The migration guide must contain the type of IDL used to describe the Web API.
+    	\item The migration guide must contain the type of Web API.
+    	\item The migration guide must contain both the previous and the current version number according to the semantic versioning principles.
+    	\item The migration guide can contain a short textual summary to provide an overview of the changes introduced in the current version.
+    	\item The migration guide must contain a list of all breaking changes introduced in the current version. 
     \end{enumerate} \\ [-5mm]
     \hline
     \textit{Response Measure} &
     \vspace{-8.5mm}
     \begin{itemize}[itemindent=-9pt, leftmargin=14pt, itemsep=0pt, align=left]
-       	\item Success: Migration guide can be retrieved and parsed by migration tool.
-       	\item Success: IDL document can be retrieved and parsed by migration tool.
+       	\item Success: The migration guide can be retrieved and parsed by migration tool.
+       	\item Success: The IDL document can be retrieved and parsed by migration tool.
         \vspace{-5mm}
     \end{itemize}\\
     \hline
