--- a/frontmatter/acronyms.tex
+++ b/frontmatter/acronyms.tex
@@ -7,6 +7,7 @@
 \acro{DSL}{Domain-specific Language}
 \acro{GoF}{Gang of Four}
 \acro{GPL}{General Purpose Language}
+\acro{HTTP}{Hypertext Transfer Protocol}
 \acro{IDE}{Integrated Development Environment}
 \acro{IDL}{Interface Description Language}
 \acro{JSON}{JavaScript Object Notation}
